--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  notes: MyText
+  name: One
+  notes: Text for Project One
   complete: false
 
 two:
-  name: MyString
-  notes: MyText
-  complete: false
+  name: Two
+  notes: Text for Project Two which is complete
+  complete: true
